--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Mern stack starter (MongoDB, Express, React, Node)",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "compile": "webpack"
   },
   "repository": {
@@ -30,6 +31,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "webpack": "^3.9.1"
+    "webpack": "^3.9.1",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0"
+  },
+  "dependencies": {
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
