--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "compile": "webpack"
+    "compile": "webpack",
+    "start-server": "npm run compile && nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pira26/MERN.git"
   },
   "keywords": [
+    "JavaScript",
     "React",
     "Node",
     "Express",
-    "MongoDb",
+    "MongoDB",
     "Mongoose",
     "Webpack"
   ],
@@ -31,14 +33,23 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "nodemon": "^1.12.1",
     "webpack": "^3.9.1",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "method-override": "^2.3.10",
+    "mongoose": "^4.13.6",
+    "morgan": "^1.9.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "serve-favicon": "^2.4.5"
   }
 }
